--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-plugin-jest": "^22.3.0"
+  }
 }
